Add PWA support with service worker and offline capabilities

--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang="fa" dir="rtl">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>تمیزی - TAMEZZY</title>
+    <meta name="theme-color" content="#FF5E62" />
+    <meta name="description" content="تیمیززی - هوش مصنوعی برای نظافت منزل" />
+    <link rel="apple-touch-icon" href="/logo.svg" />
+    <link rel="manifest" href="/manifest.webmanifest" />
+    <title>تیمیززی</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet" />
   </head>
